# clauto-opt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pr.yml  publish.yml
docs/: getting-started.md
examples/: basic_training.py
src/clauto_opt/: __init__.py  config.py  exceptions.py  models.py  optimizer.py  tracking.py  triggers.py
src/clauto_opt/backends/: __init__.py  api.py  cli.py
src/clauto_opt/templates/: incremental.md.j2  initial.md.j2
tests/: conftest.py  test_backends.py  test_models.py  test_optimizer.py  test_templates.py  test_tracking.py  test_triggers.py
