[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clauto-opt"
version = "0.1.0"
description = "Claude Automatic Optimizer — wraps PyTorch optimizers and consults Claude to tune hyperparameters"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "torch>=2.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
prodigy = [
    "prodigy-optimizer",
    "prodigy-plus-schedule-free",
]
wandb = [
    "wandb",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "black>=24.0",
    "isort>=5.0",
    "flake8>=7.0",
    "mypy>=1.8",
    "transformers",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clauto_opt"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
